commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.asyncresultstatus.yml
+++ b/docs/docs-ref-autogen/office/office/office.asyncresultstatus.yml
@@ -1,28 +1,25 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.AsyncResultStatus:enum'
-    summary: 指定异步调用的结果。
-    remarks: '由 `status` [AsyncResult](xref:office!Office.AsyncResult:interface)对象的属性返回。'
-    name: Office.AsyncResultStatus
-    fullName: Office.AsyncResultStatus
-    langs:
-      - typeScript
-    type: enum
-    package: office!
-    children:
-      - 'office!Office.AsyncResultStatus.Failed:member'
-      - 'office!Office.AsyncResultStatus.Succeeded:member'
-  - uid: 'office!Office.AsyncResultStatus.Failed:member'
-    summary: 调用失败，请检查 error 对象。
-    name: Failed
-    fullName: Failed
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.AsyncResultStatus.Succeeded:member'
-    summary: 调用成功。
-    name: Succeeded
-    fullName: Succeeded
-    langs:
-      - typeScript
-    type: field
+### YamlMime:TSEnum
+name: Office.AsyncResultStatus
+uid: office!Office.AsyncResultStatus:enum
+package: office!
+fullName: Office.AsyncResultStatus
+summary: 指定异步调用的结果。
+remarks: 由 `status` [AsyncResult](xref:office!Office.AsyncResult:interface) 对象的属性返回。
+isPreview: false
+isDeprecated: false
+fields:
+- name: Failed
+  uid: office!Office.AsyncResultStatus.Failed:member
+  package: office!
+  summary: 调用失败，请检查 error 对象。
+- name: Succeeded
+  uid: office!Office.AsyncResultStatus.Succeeded:member
+  package: office!
+  summary: 调用成功。
+metadata:
+  ms.openlocfilehash: b7d094c7203f930c4faf663935a31937369a92f5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151371"
