--- a/docs/docs-ref-autogen/office/office/office.initializationreason.yml
+++ b/docs/docs-ref-autogen/office/office/office.initializationreason.yml
@@ -1,27 +1,25 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.InitializationReason:enum'
-    summary: 指定是刚刚插入外接程序，还是文档中已包含。
-    name: Office.InitializationReason
-    fullName: Office.InitializationReason
-    langs:
-      - typeScript
-    type: enum
-    package: office!
-    children:
-      - 'office!Office.InitializationReason.DocumentOpened:member'
-      - 'office!Office.InitializationReason.Inserted:member'
-  - uid: 'office!Office.InitializationReason.DocumentOpened:member'
-    summary: 外接程序 已是打开的文档的一部分。
-    name: DocumentOpened
-    fullName: DocumentOpened
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.InitializationReason.Inserted:member'
-    summary: 刚刚将 外接程序 插入文档中。
-    name: Inserted
-    fullName: Inserted
-    langs:
-      - typeScript
-    type: field
+### YamlMime:TSEnum
+name: Office.InitializationReason
+uid: office!Office.InitializationReason:enum
+package: office!
+fullName: Office.InitializationReason
+summary: 指定是刚刚插入外接程序，还是文档中已包含。
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: DocumentOpened
+  uid: office!Office.InitializationReason.DocumentOpened:member
+  package: office!
+  summary: 外接程序 已是打开的文档的一部分。
+- name: Inserted
+  uid: office!Office.InitializationReason.Inserted:member
+  package: office!
+  summary: 刚刚将 外接程序 插入文档中。
+metadata:
+  ms.openlocfilehash: 2ff868b90ad611ecdfbebf90608dfbef9977ca32
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151294"
