--- a/docs/docs-ref-autogen/office/office/office.nodedeletedeventargs.yml
+++ b/docs/docs-ref-autogen/office/office/office.nodedeletedeventargs.yml
@@ -1,56 +1,58 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.NodeDeletedEventArgs:interface'
-    summary: 提供有关引发 nodeDeleted 事件的已删除节点的信息。
-    name: Office.NodeDeletedEventArgs
-    fullName: Office.NodeDeletedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: office!
-    children:
-      - 'office!Office.NodeDeletedEventArgs#isUndoRedo:member'
-      - 'office!Office.NodeDeletedEventArgs#oldNextSibling:member'
-      - 'office!Office.NodeDeletedEventArgs#oldNode:member'
-  - uid: 'office!Office.NodeDeletedEventArgs#isUndoRedo:member'
-    summary: 获取节点是否作为用户撤销/还原操作的一部分删除。
-    name: isUndoRedo
-    fullName: isUndoRedo
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'isUndoRedo: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'office!Office.NodeDeletedEventArgs#oldNextSibling:member'
-    summary: '获取刚刚从[CustomXmlPart](xref:office!Office.CustomXmlPart:interface)对象中删除的前一个节点的下一个同级。'
-    name: oldNextSibling
-    fullName: oldNextSibling
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'oldNextSibling: CustomXmlNode;'
-      return:
-        type:
-          - 'office!Office.CustomXmlNode:interface'
-  - uid: 'office!Office.NodeDeletedEventArgs#oldNode:member'
-    summary: |-
-      获取刚刚从[CustomXmlPart](xref:office!Office.CustomXmlPart:interface)对象中删除的节点。
+### YamlMime:TSType
+name: Office.NodeDeletedEventArgs
+uid: office!Office.NodeDeletedEventArgs:interface
+package: office!
+fullName: Office.NodeDeletedEventArgs
+summary: 提供有关引发 nodeDeleted 事件的已删除节点的信息。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: isUndoRedo
+  uid: office!Office.NodeDeletedEventArgs#isUndoRedo:member
+  package: office!
+  fullName: isUndoRedo
+  summary: 获取节点是否作为用户撤销/还原操作的一部分删除。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'isUndoRedo: boolean;'
+    return:
+      type: boolean
+- name: oldNextSibling
+  uid: office!Office.NodeDeletedEventArgs#oldNextSibling:member
+  package: office!
+  fullName: oldNextSibling
+  summary: 获取刚刚从 [CustomXmlPart](xref:office!Office.CustomXmlPart:interface) 对象中删除的前一个节点的下一个同级。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'oldNextSibling: CustomXmlNode;'
+    return:
+      type: <xref uid="office!Office.CustomXmlNode:interface" />
+- name: oldNode
+  uid: office!Office.NodeDeletedEventArgs#oldNode:member
+  package: office!
+  fullName: oldNode
+  summary: >-
+    获取刚刚从 [CustomXmlPart](xref:office!Office.CustomXmlPart:interface) 对象中删除的节点。
 
-      请注意，如果正在从文档中删除子树，此节点可能有子级。此节点还将是一个"断开"节点，以便您能从该节点向下查询，但是不能向上查询树 - 该节点似乎是单独存在的。
-    name: oldNode
-    fullName: oldNode
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'oldNode: CustomXmlNode;'
-      return:
-        type:
-          - 'office!Office.CustomXmlNode:interface'
-references:
-  - uid: 'office!Office.CustomXmlNode:interface'
-    name: CustomXmlNode
+
+    请注意，如果正在从文档中删除子树，此节点可能有子级。此节点还将是一个"断开"节点，以便您能从该节点向下查询，但是不能向上查询树 - 该节点似乎是单独存在的。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'oldNode: CustomXmlNode;'
+    return:
+      type: <xref uid="office!Office.CustomXmlNode:interface" />
+metadata:
+  ms.openlocfilehash: 6d86d655863ea63542c2b0f5eb4e1ba70c86eaee
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151266"
