--- a/docs/docs-ref-autogen/office/office/officeextension.clientobject.yml
+++ b/docs/docs-ref-autogen/office/office/officeextension.clientobject.yml
@@ -1,40 +1,42 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    summary: 一个代表 Office 文档中的对象的抽象代理对象。 您可以从上下文（或其他代理对象）创建代理对象，将命令添加到队列以对该对象执行操作，然后通过调用来将代理对象状态与文档同步`context.sync()`<!-- -->.
-    name: OfficeExtension.ClientObject
-    fullName: OfficeExtension.ClientObject
-    langs:
-      - typeScript
-    type: class
-    package: office!
-    children:
-      - 'office!OfficeExtension.ClientObject#context:member'
-      - 'office!OfficeExtension.ClientObject#isNullObject:member'
-  - uid: 'office!OfficeExtension.ClientObject#context:member'
-    summary: 与对象关联的请求上下文
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: ClientRequestContext;'
-      return:
-        type:
-          - 'office!OfficeExtension.ClientRequestContext:class'
-  - uid: 'office!OfficeExtension.ClientObject#isNullObject:member'
-    summary: 返回一个布尔值，该值指示对应的对象是否为 null 对象。 在 `context.sync()` 读取 isNullObject 属性之前，必须先调用。
-    name: isNullObject
-    fullName: isNullObject
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'isNullObject: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'office!OfficeExtension.ClientRequestContext:class'
-    name: ClientRequestContext
+### YamlMime:TSType
+name: OfficeExtension.ClientObject
+uid: office!OfficeExtension.ClientObject:class
+package: office!
+fullName: OfficeExtension.ClientObject
+summary: 一个代表 Office 文档中的对象的抽象代理对象。 您可以从上下文 (或其他代理对象) 中创建代理对象，将命令添加到队列以对该对象执行操作，然后通过调用来将代理对象状态与文档同步 `context.sync()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: office!OfficeExtension.ClientObject#context:member
+  package: office!
+  fullName: context
+  summary: 与对象关联的请求上下文
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: ClientRequestContext;'
+    return:
+      type: <xref uid="office!OfficeExtension.ClientRequestContext:class" />
+- name: isNullObject
+  uid: office!OfficeExtension.ClientObject#isNullObject:member
+  package: office!
+  fullName: isNullObject
+  summary: 返回一个布尔值，该值指示对应的对象是否为 null 对象。 在 `context.sync()` 读取 isNullObject 属性之前，必须先调用。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'isNullObject: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 036a5ef6dfa82c7f2a274d2d4fa8dee556f7c544
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151238"
