--- a/docs/docs-ref-autogen/office/office/officeextension.debuginfo.yml
+++ b/docs/docs-ref-autogen/office/office/officeextension.debuginfo.yml
@@ -1,121 +1,114 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!OfficeExtension.DebugInfo:interface'
-    summary: 提供有关错误的信息。
-    name: OfficeExtension.DebugInfo
-    fullName: OfficeExtension.DebugInfo
-    langs:
-      - typeScript
-    type: interface
-    package: office!
-    children:
-      - 'office!OfficeExtension.DebugInfo#code:member'
-      - 'office!OfficeExtension.DebugInfo#errorLocation:member'
-      - 'office!OfficeExtension.DebugInfo#fullStatements:member'
-      - 'office!OfficeExtension.DebugInfo#innerError:member'
-      - 'office!OfficeExtension.DebugInfo#message:member'
-      - 'office!OfficeExtension.DebugInfo#statements:member'
-      - 'office!OfficeExtension.DebugInfo#surroundingStatements:member'
-  - uid: 'office!OfficeExtension.DebugInfo#code:member'
-    summary: 错误代码字符串，例如 "InvalidArgument"。
-    name: code
-    fullName: code
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'code: string;'
-      return:
-        type:
-          - string
-  - uid: 'office!OfficeExtension.DebugInfo#errorLocation:member'
-    summary: 对象类型以及属性或方法名称（或类似的信息）（如果有）。
-    name: errorLocation
-    fullName: errorLocation
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'errorLocation?: string;'
-      return:
-        type:
-          - string
-  - uid: 'office!OfficeExtension.DebugInfo#fullStatements:member'
-    summary: |-
-      批处理请求中的所有语句（包括在请求中指定的任何潜在敏感信息）（如果有）。
+### YamlMime:TSType
+name: OfficeExtension.DebugInfo
+uid: office!OfficeExtension.DebugInfo:interface
+package: office!
+fullName: OfficeExtension.DebugInfo
+summary: 提供有关错误的信息。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: code
+  uid: office!OfficeExtension.DebugInfo#code:member
+  package: office!
+  fullName: code
+  summary: 错误代码字符串，例如 "InvalidArgument"。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'code: string;'
+    return:
+      type: string
+- name: errorLocation
+  uid: office!OfficeExtension.DebugInfo#errorLocation:member
+  package: office!
+  fullName: errorLocation
+  summary: 对象类型和属性或方法名称 (或类似的信息) （如果有）。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'errorLocation?: string;'
+    return:
+      type: string
+- name: fullStatements
+  uid: office!OfficeExtension.DebugInfo#fullStatements:member
+  package: office!
+  fullName: fullStatements
+  summary: >-
+    批处理请求中的所有语句 (包括在请求) 中指定的任何潜在敏感信息（如果有）。
 
-      这些语句可能与编写的代码不完全匹配，但将是接近近似的。
-    name: fullStatements
-    fullName: fullStatements
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'fullStatements?: string[];'
-      return:
-        type:
-          - 'string[]'
-  - uid: 'office!OfficeExtension.DebugInfo#innerError:member'
-    summary: 内部错误（如果适用）。
-    name: innerError
-    fullName: innerError
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'innerError?: DebugInfo | string;'
-      return:
-        type:
-          - 'office!OfficeExtension.DebugInfo#innerError~0:complex'
-  - uid: 'office!OfficeExtension.DebugInfo#message:member'
-    summary: 通过主机 Office 应用程序传递的错误消息。
-    name: message
-    fullName: message
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'message: string;'
-      return:
-        type:
-          - string
-  - uid: 'office!OfficeExtension.DebugInfo#statements:member'
-    summary: |-
-      导致错误的语句（如果可用）。
 
-      此语句永远不会包含任何潜在的敏感数据，并且可能会与编写的代码不完全匹配，但将是一个接近的近似值。
-    name: statements
-    fullName: statements
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'statements?: string;'
-      return:
-        type:
-          - string
-  - uid: 'office!OfficeExtension.DebugInfo#surroundingStatements:member'
-    summary: |-
-      紧前面和后面的语句，如果可用，则遵循导致错误的语句。
+    这些语句可能与编写的代码不完全匹配，但将是接近近似的。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'fullStatements?: string[];'
+    return:
+      type: string[]
+- name: innerError
+  uid: office!OfficeExtension.DebugInfo#innerError:member
+  package: office!
+  fullName: innerError
+  summary: 内部错误（如果适用）。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'innerError?: DebugInfo | string;'
+    return:
+      type: <xref uid="office!OfficeExtension.DebugInfo:interface" /> | string
+- name: message
+  uid: office!OfficeExtension.DebugInfo#message:member
+  package: office!
+  fullName: message
+  summary: 通过主机 Office 应用程序传递的错误消息。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'message: string;'
+    return:
+      type: string
+- name: statements
+  uid: office!OfficeExtension.DebugInfo#statements:member
+  package: office!
+  fullName: statements
+  summary: >-
+    导致错误的语句（如果可用）。
 
-      这些语句永远不会包含任何潜在的敏感数据，并且可能会与编写的代码不完全匹配，但将是一个接近的近似值。
-    name: surroundingStatements
-    fullName: surroundingStatements
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'surroundingStatements?: string[];'
-      return:
-        type:
-          - 'string[]'
-references:
-  - uid: 'office!OfficeExtension.DebugInfo#innerError~0:complex'
-    name: DebugInfo | string
-    fullName: OfficeExtension.DebugInfo | string
-    spec.typeScript:
-      - uid: 'office!OfficeExtension.DebugInfo:interface'
-        name: DebugInfo
-        fullName: OfficeExtension.DebugInfo
-      - name: ' | string'
-        fullName: ' | string'
+
+    此语句永远不会包含任何潜在的敏感数据，并且可能会与编写的代码不完全匹配，但将是一个接近的近似值。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'statements?: string;'
+    return:
+      type: string
+- name: surroundingStatements
+  uid: office!OfficeExtension.DebugInfo#surroundingStatements:member
+  package: office!
+  fullName: surroundingStatements
+  summary: >-
+    紧前面和后面的语句，如果可用，则遵循导致错误的语句。
+
+
+    这些语句永远不会包含任何潜在的敏感数据，并且可能会与编写的代码不完全匹配，但将是一个接近的近似值。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'surroundingStatements?: string[];'
+    return:
+      type: string[]
+metadata:
+  ms.openlocfilehash: 47a94f90b995a73066b28719b998a909f538ace5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151231"
