--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisdata.yml
@@ -1,46 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisData:interface'
-    summary: 描述通过调用 "inkAnalysis （）" 返回的数据的接口。
-    name: OneNote.Interfaces.InkAnalysisData
-    fullName: OneNote.Interfaces.InkAnalysisData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisData#id:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisData#page:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisData#id:member'
-    summary: |-
-      获取 InkAnalysis 对象的 ID。 只读。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisData
+uid: onenote!OneNote.Interfaces.InkAnalysisData:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisData
+summary: '一个接口，该接口描述通过调用 "inkAnalysis ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: id
+  uid: onenote!OneNote.Interfaces.InkAnalysisData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 InkAnalysis 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisData#page:member'
-    summary: |-
-      获取父页对象。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: page
-    fullName: page
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'page?: OneNote.Interfaces.PageData;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.PageData:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.PageData:interface'
-    name: OneNote.Interfaces.PageData
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: page
+  uid: onenote!OneNote.Interfaces.InkAnalysisData#page:member
+  package: onenote!
+  fullName: page
+  summary: >-
+    获取父页对象。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'page?: OneNote.Interfaces.PageData;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.PageData:interface" />
+metadata:
+  ms.openlocfilehash: 2cd96494621292f7208b45ea779f38dc1a61ddd9
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151133"
