--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislinedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislinedata.yml
@@ -1,71 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineData:interface'
-    summary: 描述通过调用 "inkAnalysisLine （）" 返回的数据的接口。
-    name: OneNote.Interfaces.InkAnalysisLineData
-    fullName: OneNote.Interfaces.InkAnalysisLineData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineData#id:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineData#paragraph:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineData#words:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineData#id:member'
-    summary: |-
-      获取 InkAnalysisLine 对象的 ID。 只读。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisLineData
+uid: onenote!OneNote.Interfaces.InkAnalysisLineData:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisLineData
+summary: '一个接口，该接口描述通过调用 "inkAnalysisLine ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: id
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 InkAnalysisLine 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineData#paragraph:member'
-    summary: |-
-      对父级 InkAnalysisParagraph 的引用。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraph
-    fullName: paragraph
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraph?: OneNote.Interfaces.InkAnalysisParagraphData;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisParagraphData:interface'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineData#words:member'
-    summary: |-
-      获取此墨迹分析行中的墨迹分析字词。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: paragraph
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineData#paragraph:member
+  package: onenote!
+  fullName: paragraph
+  summary: >-
+    对父级 InkAnalysisParagraph 的引用。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: words
-    fullName: words
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'words?: OneNote.Interfaces.InkAnalysisWordData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisLineData#words~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphData:interface'
-    name: OneNote.Interfaces.InkAnalysisParagraphData
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineData#words~0:complex'
-    name: 'OneNote.Interfaces.InkAnalysisWordData[]'
-    fullName: 'OneNote.Interfaces.InkAnalysisWordData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordData:interface'
-        name: OneNote.Interfaces.InkAnalysisWordData
-        fullName: OneNote.Interfaces.InkAnalysisWordData
-      - name: '[]'
-        fullName: '[]'
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraph?: OneNote.Interfaces.InkAnalysisParagraphData;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisParagraphData:interface" />
+- name: words
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineData#words:member
+  package: onenote!
+  fullName: words
+  summary: >-
+    获取此墨迹分析行中的墨迹分析字词。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'words?: OneNote.Interfaces.InkAnalysisWordData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisWordData:interface" />[]
+metadata:
+  ms.openlocfilehash: 30aeb9f9bb47b0ac7b2c0447a824d1d07275b61f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151112"
