--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkworddata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkworddata.yml
@@ -1,59 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkWordData:interface'
-    summary: 描述通过调用 "inkWord （）" 返回的数据的接口。
-    name: OneNote.Interfaces.InkWordData
-    fullName: OneNote.Interfaces.InkWordData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkWordData#id:member'
-      - 'onenote!OneNote.Interfaces.InkWordData#languageId:member'
-      - 'onenote!OneNote.Interfaces.InkWordData#wordAlternates:member'
-  - uid: 'onenote!OneNote.Interfaces.InkWordData#id:member'
-    summary: |-
-      获取 InkWord 对象的 ID。 只读。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkWordData
+uid: onenote!OneNote.Interfaces.InkWordData:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkWordData
+summary: '一个接口，该接口描述通过调用 "inkWord ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: id
+  uid: onenote!OneNote.Interfaces.InkWordData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 InkWord 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.InkWordData#languageId:member'
-    summary: |-
-      该墨迹字词中已识别语言的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: languageId
-    fullName: languageId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'languageId?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.InkWordData#wordAlternates:member'
-    summary: |-
-      按照可能性的顺序，已在此墨迹字词中识别的字词。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: languageId
+  uid: onenote!OneNote.Interfaces.InkWordData#languageId:member
+  package: onenote!
+  fullName: languageId
+  summary: >-
+    该墨迹字词中已识别语言的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: wordAlternates
-    fullName: wordAlternates
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'wordAlternates?: string[];'
-      return:
-        type:
-          - 'string[]'
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'languageId?: string;'
+    return:
+      type: string
+- name: wordAlternates
+  uid: onenote!OneNote.Interfaces.InkWordData#wordAlternates:member
+  package: onenote!
+  fullName: wordAlternates
+  summary: >-
+    按照可能性的顺序，已在此墨迹字词中识别的字词。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'wordAlternates?: string[];'
+    return:
+      type: string[]
+metadata:
+  ms.openlocfilehash: 3cd5c50f4eda27b9d29ec56fe13c3322d4f4d8c9
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151084"
