--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.outlinedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.outlinedata.yml
@@ -1,53 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.OutlineData:interface'
-    summary: 描述通过调用 "toJSON （）" 返回的数据的接口。
-    name: OneNote.Interfaces.OutlineData
-    fullName: OneNote.Interfaces.OutlineData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.OutlineData#id:member'
-      - 'onenote!OneNote.Interfaces.OutlineData#paragraphs:member'
-  - uid: 'onenote!OneNote.Interfaces.OutlineData#id:member'
-    summary: |-
-      获取边框对象的 ID。 只读。
+### YamlMime:TSType
+name: OneNote.Interfaces.OutlineData
+uid: onenote!OneNote.Interfaces.OutlineData:interface
+package: onenote!
+fullName: OneNote.Interfaces.OutlineData
+summary: '描述通过调用 "toJSON ( # A1" 返回的数据的接口。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: id
+  uid: onenote!OneNote.Interfaces.OutlineData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取边框对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.OutlineData#paragraphs:member'
-    summary: |-
-      获取“边框”中 Paragraph 对象的集合。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraphs
-    fullName: paragraphs
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraphs?: OneNote.Interfaces.ParagraphData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.OutlineData#paragraphs~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.OutlineData#paragraphs~0:complex'
-    name: 'OneNote.Interfaces.ParagraphData[]'
-    fullName: 'OneNote.Interfaces.ParagraphData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.ParagraphData:interface'
-        name: OneNote.Interfaces.ParagraphData
-        fullName: OneNote.Interfaces.ParagraphData
-      - name: '[]'
-        fullName: '[]'
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: paragraphs
+  uid: onenote!OneNote.Interfaces.OutlineData#paragraphs:member
+  package: onenote!
+  fullName: paragraphs
+  summary: >-
+    获取“边框”中 Paragraph 对象的集合。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraphs?: OneNote.Interfaces.ParagraphData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ParagraphData:interface" />[]
+metadata:
+  ms.openlocfilehash: 18bdda417ac604c69c7997e00c38dca157009149
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49150993"
