--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.outlineloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.outlineloadoptions.yml
@@ -1,79 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.OutlineLoadOptions:interface'
-    summary: |-
-      表示 Paragraph 对象的容器。
+### YamlMime:TSType
+name: OneNote.Interfaces.OutlineLoadOptions
+uid: onenote!OneNote.Interfaces.OutlineLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.OutlineLoadOptions
+summary: >-
+  表示 Paragraph 对象的容器。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.OutlineLoadOptions
-    fullName: OneNote.Interfaces.OutlineLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.OutlineLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.OutlineLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.OutlineLoadOptions#pageContent:member'
-      - 'onenote!OneNote.Interfaces.OutlineLoadOptions#paragraphs:member'
-  - uid: 'onenote!OneNote.Interfaces.OutlineLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.OutlineLoadOptions#id:member'
-    summary: |-
-      获取边框对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.OutlineLoadOptions#pageContent:member'
-    summary: |-
-      获取包含边框的 PageContent 对象。 此对象定义页面上 Outline 的位置。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.OutlineLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.OutlineLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取边框对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: pageContent
-    fullName: pageContent
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'pageContent?: OneNote.Interfaces.PageContentLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.PageContentLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.OutlineLoadOptions#paragraphs:member'
-    summary: |-
-      获取“边框”中 Paragraph 对象的集合。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraphs
-    fullName: paragraphs
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraphs?: OneNote.Interfaces.ParagraphCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.PageContentLoadOptions:interface'
-    name: OneNote.Interfaces.PageContentLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.ParagraphCollectionLoadOptions
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: pageContent
+  uid: onenote!OneNote.Interfaces.OutlineLoadOptions#pageContent:member
+  package: onenote!
+  fullName: pageContent
+  summary: >-
+    获取包含边框的 PageContent 对象。 此对象定义页面上 Outline 的位置。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'pageContent?: OneNote.Interfaces.PageContentLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.PageContentLoadOptions:interface" />
+- name: paragraphs
+  uid: onenote!OneNote.Interfaces.OutlineLoadOptions#paragraphs:member
+  package: onenote!
+  fullName: paragraphs
+  summary: >-
+    获取“边框”中 Paragraph 对象的集合。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraphs?: OneNote.Interfaces.ParagraphCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: f88e97a2ab63093197bc43890899c2806f586bb3
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49150972"
