--- a/docs/docs-ref-autogen/excel_online/excel/excel.worksheetformatchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.worksheetformatchangedeventargs.yml
@@ -1,136 +1,129 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.WorksheetFormatChangedEventArgs:interface'
-    summary: |-
-      提供有关工作表格式更改事件的信息。
+### YamlMime:TSType
+name: Excel.WorksheetFormatChangedEventArgs
+uid: excel!Excel.WorksheetFormatChangedEventArgs:interface
+package: excel!
+fullName: Excel.WorksheetFormatChangedEventArgs
+summary: >-
+  提供有关工作表格式更改事件的信息。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.WorksheetFormatChangedEventArgs
-    fullName: Excel.WorksheetFormatChangedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.WorksheetFormatChangedEventArgs#address:member'
-      - 'excel!Excel.WorksheetFormatChangedEventArgs#getRange:member(1)'
-      - 'excel!Excel.WorksheetFormatChangedEventArgs#getRangeOrNullObject:member(1)'
-      - 'excel!Excel.WorksheetFormatChangedEventArgs#source:member'
-      - 'excel!Excel.WorksheetFormatChangedEventArgs#type:member'
-      - 'excel!Excel.WorksheetFormatChangedEventArgs#worksheetId:member'
-  - uid: 'excel!Excel.WorksheetFormatChangedEventArgs#address:member'
-    summary: |-
-      获取区域地址，该地址表示特定工作表上的更改区域。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: address
-    fullName: address
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'address: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.WorksheetFormatChangedEventArgs#getRange:member(1)'
-    summary: |-
-      获取区域，该区域表示特定工作表上的更改区域。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: address
+  uid: excel!Excel.WorksheetFormatChangedEventArgs#address:member
+  package: excel!
+  fullName: address
+  summary: >-
+    获取区域地址，该地址表示特定工作表上的更改区域。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getRange(ctx)
-    fullName: getRange(ctx)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getRange(ctx: Excel.RequestContext): Excel.Range;'
-      return:
-        type:
-          - 'excel!Excel.Range:class'
-        description: ''
-      parameters:
-        - id: ctx
-          description: ''
-          type:
-            - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.WorksheetFormatChangedEventArgs#getRangeOrNullObject:member(1)'
-    summary: |-
-      获取区域，该区域表示特定工作表上的更改区域。 它可能会返回 null 对象。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getRangeOrNullObject(ctx)
-    fullName: getRangeOrNullObject(ctx)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getRangeOrNullObject(ctx: Excel.RequestContext): Excel.Range;'
-      return:
-        type:
-          - 'excel!Excel.Range:class'
-        description: ''
-      parameters:
-        - id: ctx
-          description: ''
-          type:
-            - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.WorksheetFormatChangedEventArgs#source:member'
-    summary: |-
-      获取事件源。 有关详细信息，请参阅 Excel.EventSource。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'address: string;'
+    return:
+      type: string
+- name: source
+  uid: excel!Excel.WorksheetFormatChangedEventArgs#source:member
+  package: excel!
+  fullName: source
+  summary: >-
+    获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: source
-    fullName: source
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'source: Excel.EventSource | "Local" | "Remote";'
-      return:
-        type:
-          - 'excel!Excel.WorksheetFormatChangedEventArgs#source~0:complex'
-  - uid: 'excel!Excel.WorksheetFormatChangedEventArgs#type:member'
-    summary: |-
-      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type: "WorksheetFormatChanged";'
-      return:
-        type:
-          - '"WorksheetFormatChanged"'
-  - uid: 'excel!Excel.WorksheetFormatChangedEventArgs#worksheetId:member'
-    summary: |-
-      获取其中的数据发生更改的工作表的 ID。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'source: Excel.EventSource | "Local" | "Remote";'
+    return:
+      type: <xref uid="excel!Excel.EventSource:enum" /> | "Local" | "Remote"
+- name: type
+  uid: excel!Excel.WorksheetFormatChangedEventArgs#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: worksheetId
-    fullName: worksheetId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'worksheetId: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'excel!Excel.Range:class'
-    name: Excel.Range
-  - uid: 'excel!Excel.RequestContext:class'
-    name: Excel.RequestContext
-  - uid: 'excel!Excel.WorksheetFormatChangedEventArgs#source~0:complex'
-    name: Excel.EventSource | "Local" | "Remote"
-    fullName: Excel.EventSource | "Local" | "Remote"
-    spec.typeScript:
-      - uid: 'excel!Excel.EventSource:enum'
-        name: Excel.EventSource
-        fullName: Excel.EventSource
-      - name: ' | "Local" | "Remote"'
-        fullName: ' | "Local" | "Remote"'
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type: "WorksheetFormatChanged";'
+    return:
+      type: "\"WorksheetFormatChanged\""
+- name: worksheetId
+  uid: excel!Excel.WorksheetFormatChangedEventArgs#worksheetId:member
+  package: excel!
+  fullName: worksheetId
+  summary: >-
+    获取其中的数据发生更改的工作表的 ID。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'worksheetId: string;'
+    return:
+      type: string
+methods:
+- name: getRange(ctx)
+  uid: excel!Excel.WorksheetFormatChangedEventArgs#getRange:member(1)
+  package: excel!
+  fullName: getRange(ctx)
+  summary: >-
+    获取区域，该区域表示特定工作表上的更改区域。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getRange(ctx: Excel.RequestContext): Excel.Range;'
+    parameters:
+    - id: ctx
+      description: ''
+      type: <xref uid="excel!Excel.RequestContext:class" />
+    return:
+      type: <xref uid="excel!Excel.Range:class" />
+      description: ''
+- name: getRangeOrNullObject(ctx)
+  uid: excel!Excel.WorksheetFormatChangedEventArgs#getRangeOrNullObject:member(1)
+  package: excel!
+  fullName: getRangeOrNullObject(ctx)
+  summary: >-
+    获取区域，该区域表示特定工作表上的更改区域。 它可能会返回 null 对象。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getRangeOrNullObject(ctx: Excel.RequestContext): Excel.Range;'
+    parameters:
+    - id: ctx
+      description: ''
+      type: <xref uid="excel!Excel.RequestContext:class" />
+    return:
+      type: <xref uid="excel!Excel.Range:class" />
+      description: ''
+metadata:
+  ms.openlocfilehash: 62afbefa98a1de2b2523cd0a7059063c20f89d4b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151504"
