--- a/docs/docs-ref-autogen/office/office-runtime/officeruntime.apiinformation.yml
+++ b/docs/docs-ref-autogen/office/office-runtime/officeruntime.apiinformation.yml
@@ -1,34 +1,38 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-    summary: 包含用于检查 API 要求集支持的函数的接口。
-    name: OfficeRuntime.ApiInformation
-    fullName: OfficeRuntime.ApiInformation
-    langs:
-      - typeScript
-    type: interface
-    package: office-runtime!
-    children:
-      - 'office-runtime!OfficeRuntime.ApiInformation#isSetSupported:member(1)'
-  - uid: 'office-runtime!OfficeRuntime.ApiInformation#isSetSupported:member(1)'
-    summary: 检查主机 Office 应用程序是否支持指定的要求集。
-    name: 'isSetSupported(name, minVersion)'
-    fullName: 'isSetSupported(name, minVersion)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'isSetSupported(name: string, minVersion?: string): boolean;'
-      return:
-        type:
-          - boolean
-        description: ''
-      parameters:
-        - id: name
-          description: 集名称;例如，"MatrixBindings"。
-          type:
-            - string
-        - id: minVersion
-          description: 所需的最低版本;例如，"1.4"。
-          type:
-            - string
+### YamlMime:TSType
+name: OfficeRuntime.ApiInformation
+uid: office-runtime!OfficeRuntime.ApiInformation:interface
+package: office-runtime!
+fullName: OfficeRuntime.ApiInformation
+summary: 包含用于检查 API 要求集支持的函数的接口。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+methods:
+- name: isSetSupported(name, minVersion)
+  uid: office-runtime!OfficeRuntime.ApiInformation#isSetSupported:member(1)
+  package: office-runtime!
+  fullName: isSetSupported(name, minVersion)
+  summary: 检查主机 Office 应用程序是否支持指定的要求集。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'isSetSupported(name: string, minVersion?: string): boolean;'
+    parameters:
+    - id: name
+      description: 集名称;例如，"MatrixBindings"。
+      type: string
+    - id: minVersion
+      description: 所需的最低版本;例如，"1.4"。
+      type: string
+    return:
+      type: boolean
+      description: ''
+metadata:
+  ms.openlocfilehash: 0251caf9f09f1fa4de34410421e132b8fcba9c46
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151413"
