--- a/docs/docs-ref-autogen/office/office/office.addbindingfrompromptoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.addbindingfrompromptoptions.yml
@@ -1,71 +1,73 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.AddBindingFromPromptOptions:interface'
-    summary: 提供用于配置提示和标识所创建的绑定的选项。
-    name: Office.AddBindingFromPromptOptions
-    fullName: Office.AddBindingFromPromptOptions
-    langs:
-      - typeScript
-    type: interface
-    package: office!
-    children:
-      - 'office!Office.AddBindingFromPromptOptions#asyncContext:member'
-      - 'office!Office.AddBindingFromPromptOptions#id:member'
-      - 'office!Office.AddBindingFromPromptOptions#promptText:member'
-      - 'office!Office.AddBindingFromPromptOptions#sampleData:member'
-  - uid: 'office!Office.AddBindingFromPromptOptions#asyncContext:member'
-    summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
-    name: asyncContext
-    fullName: asyncContext
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'asyncContext?: any'
-      return:
-        type:
-          - any
-  - uid: 'office!Office.AddBindingFromPromptOptions#id:member'
-    summary: 绑定的唯一 ID。 自动生成（如果未提供）。
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string'
-      return:
-        type:
-          - string
-  - uid: 'office!Office.AddBindingFromPromptOptions#promptText:member'
-    summary: 指定显示在提示 UI 中且告诉用户选择内容的字符串。 限制为 200 个字符。 如果未传递 promptText 参数，则显示 "请做出选择"。
-    name: promptText
-    fullName: promptText
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'promptText?: string'
-      return:
-        type:
-          - string
-  - uid: 'office!Office.AddBindingFromPromptOptions#sampleData:member'
-    summary: |-
-      Specifies a table of sample data displayed in the prompt UI as an example of the kinds of fields (columns) that can be bound by your add-in. TableData 对象中提供的标头指定在字段选择 UI 中使用的标签。
+### YamlMime:TSType
+name: Office.AddBindingFromPromptOptions
+uid: office!Office.AddBindingFromPromptOptions:interface
+package: office!
+fullName: Office.AddBindingFromPromptOptions
+summary: 提供用于配置提示和标识所创建的绑定的选项。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: asyncContext
+  uid: office!Office.AddBindingFromPromptOptions#asyncContext:member
+  package: office!
+  fullName: asyncContext
+  summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'asyncContext?: any'
+    return:
+      type: any
+- name: id
+  uid: office!Office.AddBindingFromPromptOptions#id:member
+  package: office!
+  fullName: id
+  summary: 绑定的唯一 ID。 自动生成（如果未提供）。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string'
+    return:
+      type: string
+- name: promptText
+  uid: office!Office.AddBindingFromPromptOptions#promptText:member
+  package: office!
+  fullName: promptText
+  summary: 指定显示在提示 UI 中且告诉用户选择内容的字符串。 限制为 200 个字符。 如果未传递 promptText 参数，则显示 "请做出选择"。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'promptText?: string'
+    return:
+      type: string
+- name: sampleData
+  uid: office!Office.AddBindingFromPromptOptions#sampleData:member
+  package: office!
+  fullName: sampleData
+  summary: >-
+    Specifies a table of sample data displayed in the prompt UI as an example of the kinds of fields (columns) that can be bound by your add-in. TableData 对象中提供的标头指定在字段选择 UI 中使用的标签。
 
-      **注意**：此参数仅用于 Access 外接程序。 It is ignored if provided when calling the method in an add-in for Excel.
 
-      **重要说明**：我们不再建议您在 SharePoint 中创建和使用 Access web apps 和数据库。 作为一种替代方法，我们建议你使用 [Microsoft PowerApps](https://powerapps.microsoft.com/) 生成适用于 Web 和移动设备的无代码业务解决方案。
-    name: sampleData
-    fullName: sampleData
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sampleData?: Office.TableData'
-      return:
-        type:
-          - 'office!Office.TableData:class'
-references:
-  - uid: 'office!Office.TableData:class'
-    name: Office.TableData
+    **注意**：此参数仅用于 Access 外接程序。 It is ignored if provided when calling the method in an add-in for Excel.
+
+
+    **重要说明**：我们不再建议您在 SharePoint 中创建和使用 Access web apps 和数据库。 作为一种替代方法，我们建议你使用 [Microsoft PowerApps](https://powerapps.microsoft.com/) 生成适用于 Web 和移动设备的无代码业务解决方案。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sampleData?: Office.TableData'
+    return:
+      type: <xref uid="office!Office.TableData:class" />
+metadata:
+  ms.openlocfilehash: f331e17bf7cd5b86cda996494c388d403e2ad936
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151399"
