--- a/docs/docs-ref-autogen/office/office/office.addincommands.eventcompletedoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.addincommands.eventcompletedoptions.yml
@@ -1,24 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-    summary: 指定事件完成时的行为。
-    name: Office.AddinCommands.EventCompletedOptions
-    fullName: Office.AddinCommands.EventCompletedOptions
-    langs:
-      - typeScript
-    type: interface
-    package: office!
-    children:
-      - 'office!Office.AddinCommands.EventCompletedOptions#allowEvent:member'
-  - uid: 'office!Office.AddinCommands.EventCompletedOptions#allowEvent:member'
-    summary: 一个布尔值。 当使用完成的方法来使事件处理程序的完成信号时，此值指示已处理事件应继续执行或被取消。 例如，处理事件的外接程序 `ItemSend` 可以设置为 `allowEvent` `false` 取消发送邮件。
-    name: allowEvent
-    fullName: allowEvent
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'allowEvent: boolean;'
-      return:
-        type:
-          - boolean
+### YamlMime:TSType
+name: Office.AddinCommands.EventCompletedOptions
+uid: office!Office.AddinCommands.EventCompletedOptions:interface
+package: office!
+fullName: Office.AddinCommands.EventCompletedOptions
+summary: 指定事件完成时的行为。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: allowEvent
+  uid: office!Office.AddinCommands.EventCompletedOptions#allowEvent:member
+  package: office!
+  fullName: allowEvent
+  summary: 一个布尔值。 当使用完成的方法来使事件处理程序的完成信号时，此值指示已处理事件应继续执行或被取消。 例如，处理事件的外接程序 `ItemSend` 可以设置为 `allowEvent` `false` 取消发送邮件。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'allowEvent: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: b8650d7803d06d3760e96b3b98b53796e1c13d12
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151378"
