--- a/docs/docs-ref-autogen/office/office/office.matrixbinding.yml
+++ b/docs/docs-ref-autogen/office/office/office.matrixbinding.yml
@@ -1,75 +1,45 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.MatrixBinding:interface'
-    summary: 表示两个维度的行和列的绑定。
-    remarks: MatrixBinding 对象从 Binding 对象继承 id 属性、type 属性、Binding.getdataasync 方法和 Binding.setdataasync 方法。
-    name: Office.MatrixBinding
-    fullName: Office.MatrixBinding
-    langs:
-      - typeScript
-    type: interface
-    extends:
-      - 'office!Office.Binding:interface'
-    package: office!
-    children:
-      - 'office!Office.MatrixBinding#columnCount:member'
-      - 'office!Office.MatrixBinding#rowCount:member'
-  - uid: 'office!Office.MatrixBinding#columnCount:member'
-    summary: 获取矩阵数据结构中的列数，作为整数值。
-    name: columnCount
-    fullName: columnCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columnCount: number;'
-      return:
-        type:
-          - number
-        description: |-
-
-
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          function showBindingColumnCount() {
-              Office.context.document.bindings.getByIdAsync("myBinding", function (asyncResult) {
-                  write("Column: " + asyncResult.value.columnCount);
-              });
-          }
-          // Function that writes to a div with id='message' on the page.
-          function write(message){
-              document.getElementById('message').innerText += message; 
-          }
-          ```
-  - uid: 'office!Office.MatrixBinding#rowCount:member'
-    summary: 获取矩阵数据结构中的行数，作为整数值。
-    name: rowCount
-    fullName: rowCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowCount: number;'
-      return:
-        type:
-          - number
-        description: |-
-
-
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          function showBindingRowCount() {
-              Office.context.document.bindings.getByIdAsync("myBinding", function (asyncResult) {
-                  write("Rows: " + asyncResult.value.rowCount);
-              });
-          }
-          // Function that writes to a div with id='message' on the page.
-          function write(message){
-              document.getElementById('message').innerText += message; 
-          }
-          ```
-references:
-  - uid: 'office!Office.Binding:interface'
-    name: Binding
+### YamlMime:TSType
+name: Office.MatrixBinding
+uid: office!Office.MatrixBinding:interface
+package: office!
+fullName: Office.MatrixBinding
+summary: 表示两个维度的行和列的绑定。
+remarks: MatrixBinding 对象从 Binding 对象继承 id 属性、type 属性、Binding.getdataasync 方法和 Binding.setdataasync 方法。
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: columnCount
+  uid: office!Office.MatrixBinding#columnCount:member
+  package: office!
+  fullName: columnCount
+  summary: 获取矩阵数据结构中的列数，作为整数值。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columnCount: number;'
+    return:
+      type: number
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nfunction showBindingColumnCount() {\n    Office.context.document.bindings.getByIdAsync(\"myBinding\", function (asyncResult) {\n        write(\"Column: \" + asyncResult.value.columnCount);\n    });\n}\n// Function that writes to a div with id='message' on the page.\nfunction write(message){\n    document.getElementById('message').innerText += message; \n}\n```"
+- name: rowCount
+  uid: office!Office.MatrixBinding#rowCount:member
+  package: office!
+  fullName: rowCount
+  summary: 获取矩阵数据结构中的行数，作为整数值。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowCount: number;'
+    return:
+      type: number
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nfunction showBindingRowCount() {\n    Office.context.document.bindings.getByIdAsync(\"myBinding\", function (asyncResult) {\n        write(\"Rows: \" + asyncResult.value.rowCount);\n    });\n}\n// Function that writes to a div with id='message' on the page.\nfunction write(message){\n    document.getElementById('message').innerText += message; \n}\n```"
+extends: <xref uid="office!Office.Binding:interface" />
+metadata:
+  ms.openlocfilehash: 32477e315a4ac5cc4519ef9d21ed6b0c7c0b6b50
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151273"
