--- a/docs/docs-ref-autogen/office/office/office.platformtype.yml
+++ b/docs/docs-ref-autogen/office/office/office.platformtype.yml
@@ -1,59 +1,41 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.PlatformType:enum'
-    summary: 指定运行 Office 主机应用的操作系统或其他平台。
-    name: Office.PlatformType
-    fullName: Office.PlatformType
-    langs:
-      - typeScript
-    type: enum
-    package: office!
-    children:
-      - 'office!Office.PlatformType.Android:member'
-      - 'office!Office.PlatformType.iOS:member'
-      - 'office!Office.PlatformType.Mac:member'
-      - 'office!Office.PlatformType.OfficeOnline:member'
-      - 'office!Office.PlatformType.PC:member'
-      - 'office!Office.PlatformType.Universal:member'
-  - uid: 'office!Office.PlatformType.Android:member'
-    summary: 平台是一种 Android 设备。
-    name: Android
-    fullName: Android
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.PlatformType.iOS:member'
-    summary: IOS 设备的平台。
-    name: iOS
-    fullName: iOS
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.PlatformType.Mac:member'
-    summary: 平台是 Mac。
-    name: Mac
-    fullName: Mac
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.PlatformType.OfficeOnline:member'
-    summary: 平台是在 web 上（在浏览器中）的 Office。
-    name: OfficeOnline
-    fullName: OfficeOnline
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.PlatformType.PC:member'
-    summary: 平台是电脑（Windows）。
-    name: PC
-    fullName: PC
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.PlatformType.Universal:member'
-    summary: 平台是 WinRT。
-    name: Universal
-    fullName: Universal
-    langs:
-      - typeScript
-    type: field
+### YamlMime:TSEnum
+name: Office.PlatformType
+uid: office!Office.PlatformType:enum
+package: office!
+fullName: Office.PlatformType
+summary: 指定运行 Office 主机应用的操作系统或其他平台。
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: Android
+  uid: office!Office.PlatformType.Android:member
+  package: office!
+  summary: 平台是一种 Android 设备。
+- name: iOS
+  uid: office!Office.PlatformType.iOS:member
+  package: office!
+  summary: IOS 设备的平台。
+- name: Mac
+  uid: office!Office.PlatformType.Mac:member
+  package: office!
+  summary: 平台是 Mac。
+- name: OfficeOnline
+  uid: office!Office.PlatformType.OfficeOnline:member
+  package: office!
+  summary: 平台是在浏览器) 中的 web 上的 Office (。
+- name: PC
+  uid: office!Office.PlatformType.PC:member
+  package: office!
+  summary: 平台是电脑 (Windows) 。
+- name: Universal
+  uid: office!Office.PlatformType.Universal:member
+  package: office!
+  summary: 平台是 WinRT。
+metadata:
+  ms.openlocfilehash: 157ac995207994e78e9af9f24425cf9871fb2969
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151259"
