--- a/docs/docs-ref-autogen/office/office/officeextension.eventhandlerresult.yml
+++ b/docs/docs-ref-autogen/office/office/officeextension.eventhandlerresult.yml
@@ -1,82 +1,65 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!OfficeExtension.EventHandlerResult:class'
-    name: OfficeExtension.EventHandlerResult
-    fullName: OfficeExtension.EventHandlerResult
-    langs:
-      - typeScript
-    type: class
-    package: office!
-    children:
-      - 'office!OfficeExtension.EventHandlerResult:constructor(1)'
-      - 'office!OfficeExtension.EventHandlerResult#context:member'
-      - 'office!OfficeExtension.EventHandlerResult#remove:member(1)'
-  - uid: 'office!OfficeExtension.EventHandlerResult:constructor(1)'
-    summary: 构造类的新实例 `EventHandlerResult`
-    name: '(constructor)(context, handlers, handler)'
-    fullName: '(constructor)(context, handlers, handler)'
-    langs:
-      - typeScript
-    type: constructor
-    syntax:
-      content: 'constructor(context: ClientRequestContext, handlers: EventHandlers<T>, handler: (args: T) => Promise<any>);'
-      parameters:
-        - id: context
-          description: ''
-          type:
-            - 'office!OfficeExtension.ClientRequestContext:class'
-        - id: handlers
-          description: ''
-          type:
-            - 'office!OfficeExtension.EventHandlerResult~0:complex'
-        - id: handler
-          description: ''
-          type:
-            - 'office!OfficeExtension.EventHandlerResult~1:complex'
-  - uid: 'office!OfficeExtension.EventHandlerResult#context:member'
-    summary: 与对象关联的请求上下文
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: ClientRequestContext;'
-      return:
-        type:
-          - 'office!OfficeExtension.ClientRequestContext:class'
-  - uid: 'office!OfficeExtension.EventHandlerResult#remove:member(1)'
-    name: remove()
-    fullName: remove()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'remove(): void;'
-      return:
-        type:
-          - void
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientRequestContext:class'
-    name: ClientRequestContext
-  - uid: 'office!OfficeExtension.EventHandlerResult~0:complex'
-    name: EventHandlers<T>
-    fullName: OfficeExtension.EventHandlers<T>
-    spec.typeScript:
-      - uid: 'office!OfficeExtension.EventHandlers:class'
-        name: EventHandlers
-        fullName: OfficeExtension.EventHandlers
-      - name: <T>
-        fullName: <T>
-  - uid: 'office!OfficeExtension.EventHandlerResult~1:complex'
-    name: '(args: T) => Promise<any>'
-    fullName: '(args: T) => Promise<any>'
-    spec.typeScript:
-      - name: '(args: T) => '
-        fullName: '(args: T) => '
-      - uid: '!Promise:interface'
-        name: Promise
-        fullName: Promise
-      - name: <any>
-        fullName: <any>
+### YamlMime:TSType
+name: OfficeExtension.EventHandlerResult
+uid: office!OfficeExtension.EventHandlerResult:class
+package: office!
+fullName: OfficeExtension.EventHandlerResult
+summary: ''
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+constructors:
+- name: (constructor)(context, handlers, handler)
+  uid: office!OfficeExtension.EventHandlerResult:constructor(1)
+  package: office!
+  fullName: (constructor)(context, handlers, handler)
+  summary: 构造类的新实例 `EventHandlerResult`
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'constructor(context: ClientRequestContext, handlers: EventHandlers<T>, handler: (args: T) => Promise<any>);'
+    parameters:
+    - id: context
+      description: ''
+      type: <xref uid="office!OfficeExtension.ClientRequestContext:class" />
+    - id: handlers
+      description: ''
+      type: <xref uid="office!OfficeExtension.EventHandlers:class" />&lt;T&gt;
+    - id: handler
+      description: ''
+      type: '(args: T) =&gt; Promise&lt;any&gt;'
+properties:
+- name: context
+  uid: office!OfficeExtension.EventHandlerResult#context:member
+  package: office!
+  fullName: context
+  summary: 与对象关联的请求上下文
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: ClientRequestContext;'
+    return:
+      type: <xref uid="office!OfficeExtension.ClientRequestContext:class" />
+methods:
+- name: remove()
+  uid: office!OfficeExtension.EventHandlerResult#remove:member(1)
+  package: office!
+  fullName: remove()
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'remove(): void;'
+    return:
+      type: void
+      description: ''
+metadata:
+  ms.openlocfilehash: 25f89c89ed1d453cde0d375b522fe54ef8264655
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151161"
