--- a/docs/docs-ref-autogen/onenote/onenote/onenote.inkwordcollection.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.inkwordcollection.yml
@@ -1,242 +1,206 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.InkWordCollection:class'
-    summary: |-
-      表示 InkWord 对象的集合。
+### YamlMime:TSType
+name: OneNote.InkWordCollection
+uid: onenote!OneNote.InkWordCollection:class
+package: onenote!
+fullName: OneNote.InkWordCollection
+summary: >-
+  表示 InkWord 对象的集合。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.InkWordCollection
-    fullName: OneNote.InkWordCollection
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: onenote!
-    children:
-      - 'onenote!OneNote.InkWordCollection#context:member'
-      - 'onenote!OneNote.InkWordCollection#count:member'
-      - 'onenote!OneNote.InkWordCollection#getItem:member(1)'
-      - 'onenote!OneNote.InkWordCollection#getItemAt:member(1)'
-      - 'onenote!OneNote.InkWordCollection#items:member'
-      - 'onenote!OneNote.InkWordCollection#load:member(1)'
-      - 'onenote!OneNote.InkWordCollection#load:member(2)'
-      - 'onenote!OneNote.InkWordCollection#load:member(3)'
-      - 'onenote!OneNote.InkWordCollection#toJSON:member(1)'
-      - 'onenote!OneNote.InkWordCollection#track:member(1)'
-      - 'onenote!OneNote.InkWordCollection#untrack:member(1)'
-  - uid: 'onenote!OneNote.InkWordCollection#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'onenote!OneNote.RequestContext:class'
-  - uid: 'onenote!OneNote.InkWordCollection#count:member'
-    summary: |-
-      返回页面中的 InkWords 数目。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: count
-    fullName: count
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly count: number;'
-      return:
-        type:
-          - number
-  - uid: 'onenote!OneNote.InkWordCollection#getItem:member(1)'
-    summary: |-
-      按其在集合中的 ID 或索引获取 InkWord 对象。 只读。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: onenote!OneNote.InkWordCollection#context:member
+  package: onenote!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="onenote!OneNote.RequestContext:class" />
+- name: count
+  uid: onenote!OneNote.InkWordCollection#count:member
+  package: onenote!
+  fullName: count
+  summary: >-
+    返回页面中的 InkWords 数目。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: getItem(index)
-    fullName: getItem(index)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getItem(index: number | string): OneNote.InkWord;'
-      return:
-        type:
-          - 'onenote!OneNote.InkWord:class'
-        description: ''
-      parameters:
-        - id: index
-          description: InkWord 对象的 ID 或集合中 InkWord 对象的索引位置。
-          type:
-            - number | string
-  - uid: 'onenote!OneNote.InkWordCollection#getItemAt:member(1)'
-    summary: |-
-      按其在集合中的位置获取 InkWord。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: getItemAt(index)
-    fullName: getItemAt(index)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getItemAt(index: number): OneNote.InkWord;'
-      return:
-        type:
-          - 'onenote!OneNote.InkWord:class'
-        description: ''
-      parameters:
-        - id: index
-          description: 要检索的对象的索引值。 从零开始编制索引。
-          type:
-            - number
-  - uid: 'onenote!OneNote.InkWordCollection#items:member'
-    summary: 获取此集合中已加载的子项。
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly items: OneNote.InkWord[];'
-      return:
-        type:
-          - 'onenote!OneNote.InkWordCollection#items~0:complex'
-  - uid: 'onenote!OneNote.InkWordCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
-    remarks: |-
-      除了此签名之外，此方法还具有以下签名：
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly count: number;'
+    return:
+      type: number
+- name: items
+  uid: onenote!OneNote.InkWordCollection#items:member
+  package: onenote!
+  fullName: items
+  summary: 获取此集合中已加载的子项。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly items: OneNote.InkWord[];'
+    return:
+      type: <xref uid="onenote!OneNote.InkWord:class" />[]
+methods:
+- name: getItem(index)
+  uid: onenote!OneNote.InkWordCollection#getItem:member(1)
+  package: onenote!
+  fullName: getItem(index)
+  summary: >-
+    按其在集合中的 ID 或索引获取 InkWord 对象。 只读。
 
-      `load(option?: string | string[]): OneNote.InkWordCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): OneNote.InkWordCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getItem(index: number | string): OneNote.InkWord;'
+    parameters:
+    - id: index
+      description: InkWord 对象的 ID 或集合中 InkWord 对象的索引位置。
+      type: number | string
+    return:
+      type: <xref uid="onenote!OneNote.InkWord:class" />
+      description: ''
+- name: getItemAt(index)
+  uid: onenote!OneNote.InkWordCollection#getItemAt:member(1)
+  package: onenote!
+  fullName: getItemAt(index)
+  summary: >-
+    按其在集合中的位置获取 InkWord。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkWordCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
-    name: load(option)
-    fullName: load(option)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(option?: OneNote.Interfaces.InkWordCollectionLoadOptions & OneNote.Interfaces.CollectionLoadOptions): OneNote.InkWordCollection;'
-      return:
-        type:
-          - 'onenote!OneNote.InkWordCollection:class'
-        description: ''
-      parameters:
-        - id: option
-          description: ''
-          type:
-            - 'onenote!OneNote.InkWordCollection#load~0:complex'
-  - uid: 'onenote!OneNote.InkWordCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): OneNote.InkWordCollection;'
-      return:
-        type:
-          - 'onenote!OneNote.InkWordCollection:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'onenote!OneNote.InkWordCollection#load:member(3)'
-    name: load(option)
-    fullName: load(option)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(option?: OfficeExtension.LoadOption): OneNote.InkWordCollection;'
-      return:
-        type:
-          - 'onenote!OneNote.InkWordCollection:class'
-        description: ''
-      parameters:
-        - id: option
-          description: ''
-          type:
-            - 'office!OfficeExtension.LoadOption:interface'
-  - uid: 'onenote!OneNote.InkWordCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 `OneNote.InkWordCollection` 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.InkWordCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): OneNote.Interfaces.InkWordCollectionData;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkWordCollectionData:interface'
-        description: ''
-  - uid: 'onenote!OneNote.InkWordCollection#track:member(1)'
-    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
-    name: track()
-    fullName: track()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'track(): OneNote.InkWordCollection;'
-      return:
-        type:
-          - 'onenote!OneNote.InkWordCollection:class'
-        description: ''
-  - uid: 'onenote!OneNote.InkWordCollection#untrack:member(1)'
-    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
-    name: untrack()
-    fullName: untrack()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'untrack(): OneNote.InkWordCollection;'
-      return:
-        type:
-          - 'onenote!OneNote.InkWordCollection:class'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'onenote!OneNote.RequestContext:class'
-    name: RequestContext
-  - uid: 'onenote!OneNote.InkWord:class'
-    name: OneNote.InkWord
-  - uid: 'onenote!OneNote.InkWordCollection#items~0:complex'
-    name: 'OneNote.InkWord[]'
-    fullName: 'OneNote.InkWord[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.InkWord:class'
-        name: OneNote.InkWord
-        fullName: OneNote.InkWord
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'onenote!OneNote.InkWordCollection:class'
-    name: OneNote.InkWordCollection
-  - uid: 'onenote!OneNote.InkWordCollection#load~0:complex'
-    name: OneNote.Interfaces.InkWordCollectionLoadOptions & OneNote.Interfaces.CollectionLoadOptions
-    fullName: OneNote.Interfaces.InkWordCollectionLoadOptions & OneNote.Interfaces.CollectionLoadOptions
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.InkWordCollectionLoadOptions:interface'
-        name: OneNote.Interfaces.InkWordCollectionLoadOptions
-        fullName: OneNote.Interfaces.InkWordCollectionLoadOptions
-      - name: ' & '
-        fullName: ' & '
-      - uid: 'onenote!OneNote.Interfaces.CollectionLoadOptions:interface'
-        name: OneNote.Interfaces.CollectionLoadOptions
-        fullName: OneNote.Interfaces.CollectionLoadOptions
-  - uid: 'office!OfficeExtension.LoadOption:interface'
-    name: OfficeExtension.LoadOption
-  - uid: 'onenote!OneNote.Interfaces.InkWordCollectionData:interface'
-    name: OneNote.Interfaces.InkWordCollectionData
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getItemAt(index: number): OneNote.InkWord;'
+    parameters:
+    - id: index
+      description: 要检索的对象的索引值。 从零开始编制索引。
+      type: number
+    return:
+      type: <xref uid="onenote!OneNote.InkWord:class" />
+      description: ''
+- name: load(option)
+  uid: onenote!OneNote.InkWordCollection#load:member(1)
+  package: onenote!
+  fullName: load(option)
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
+  remarks: >-
+    除了此签名之外，此方法还具有以下签名：
+
+
+    `load(option?: string | string[]): OneNote.InkWordCollection` -Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
+
+
+    `load(option?: { select?: string; expand?: string; }): OneNote.InkWordCollection` -Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+
+
+    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkWordCollection` -仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(option?: OneNote.Interfaces.InkWordCollectionLoadOptions & OneNote.Interfaces.CollectionLoadOptions): OneNote.InkWordCollection;'
+    parameters:
+    - id: option
+      description: ''
+      type: <xref uid="onenote!OneNote.Interfaces.InkWordCollectionLoadOptions:interface" /> & <xref uid="onenote!OneNote.Interfaces.CollectionLoadOptions:interface" />
+    return:
+      type: <xref uid="onenote!OneNote.InkWordCollection:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: onenote!OneNote.InkWordCollection#load:member(2)
+  package: onenote!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): OneNote.InkWordCollection;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="onenote!OneNote.InkWordCollection:class" />
+      description: ''
+- name: load(option)
+  uid: onenote!OneNote.InkWordCollection#load:member(3)
+  package: onenote!
+  fullName: load(option)
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(option?: OfficeExtension.LoadOption): OneNote.InkWordCollection;'
+    parameters:
+    - id: option
+      description: ''
+      type: <xref uid="office!OfficeExtension.LoadOption:interface" />
+    return:
+      type: <xref uid="onenote!OneNote.InkWordCollection:class" />
+      description: ''
+- name: toJSON()
+  uid: onenote!OneNote.InkWordCollection#toJSON:member(1)
+  package: onenote!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `OneNote.InkWordCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `OneNote.Interfaces.InkWordCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): OneNote.Interfaces.InkWordCollectionData;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkWordCollectionData:interface" />
+      description: ''
+- name: track()
+  uid: onenote!OneNote.InkWordCollection#track:member(1)
+  package: onenote!
+  fullName: track()
+  summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'track(): OneNote.InkWordCollection;'
+    return:
+      type: <xref uid="onenote!OneNote.InkWordCollection:class" />
+      description: ''
+- name: untrack()
+  uid: onenote!OneNote.InkWordCollection#untrack:member(1)
+  package: onenote!
+  fullName: untrack()
+  summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'untrack(): OneNote.InkWordCollection;'
+    return:
+      type: <xref uid="onenote!OneNote.InkWordCollection:class" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 58b195d50099f77680d670dfcdb4c49a3d0ba0a2
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151147"
