--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislinecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislinecollectionloadoptions.yml
@@ -1,79 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions:interface'
-    summary: |-
-      表示 InkAnalysisLine 对象的集合。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions
+uid: onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions
+summary: >-
+  表示 InkAnalysisLine 对象的集合。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions
-    fullName: OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#paragraph:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#words:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#id:member'
-    summary: |-
-      对于集合中的每一项：获取 InkAnalysisLine 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#paragraph:member'
-    summary: |-
-      对于集合中的每个项目：对父 InkAnalysisParagraph 的引用。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    对于集合中的每一项：获取 InkAnalysisLine 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraph
-    fullName: paragraph
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraph?: OneNote.Interfaces.InkAnalysisParagraphLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#words:member'
-    summary: |-
-      对于集合中的每一项：获取此墨迹分析行中的墨迹分析词。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: words
-    fullName: words
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'words?: OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions:interface'
-    name: OneNote.Interfaces.InkAnalysisParagraphLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: paragraph
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#paragraph:member
+  package: onenote!
+  fullName: paragraph
+  summary: >-
+    对于集合中的每个项目：对父 InkAnalysisParagraph 的引用。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraph?: OneNote.Interfaces.InkAnalysisParagraphLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions:interface" />
+- name: words
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions#words:member
+  package: onenote!
+  fullName: words
+  summary: >-
+    对于集合中的每一项：获取此墨迹分析行中的墨迹分析词。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'words?: OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 8bff17d63c874adf692bf15c479c17ad1cef68c8
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151140"
