--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislineloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislineloadoptions.yml
@@ -1,79 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions:interface'
-    summary: |-
-      表示墨迹笔划形成的已识别文本行的墨迹分析数据。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisLineLoadOptions
+uid: onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisLineLoadOptions
+summary: >-
+  表示墨迹笔划形成的已识别文本行的墨迹分析数据。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.InkAnalysisLineLoadOptions
-    fullName: OneNote.Interfaces.InkAnalysisLineLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#paragraph:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#words:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#id:member'
-    summary: |-
-      获取 InkAnalysisLine 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#paragraph:member'
-    summary: |-
-      对父级 InkAnalysisParagraph 的引用。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 InkAnalysisLine 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraph
-    fullName: paragraph
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraph?: OneNote.Interfaces.InkAnalysisParagraphLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#words:member'
-    summary: |-
-      获取此墨迹分析行中的墨迹分析字词。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: words
-    fullName: words
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'words?: OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions:interface'
-    name: OneNote.Interfaces.InkAnalysisParagraphLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: paragraph
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#paragraph:member
+  package: onenote!
+  fullName: paragraph
+  summary: >-
+    对父级 InkAnalysisParagraph 的引用。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraph?: OneNote.Interfaces.InkAnalysisParagraphLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions:interface" />
+- name: words
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions#words:member
+  package: onenote!
+  fullName: words
+  summary: >-
+    获取此墨迹分析行中的墨迹分析字词。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'words?: OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisWordCollectionLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 2927e6edd933791b84accbf92cec9ffaca9df2ef
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151098"
