--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislineupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysislineupdatedata.yml
@@ -1,30 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineUpdateData:interface'
-    summary: '一个用于更新 InkAnalysisLine 对象上的数据的接口，可用于 "inkAnalysisLine （<!-- -->{ ... }<!-- -->)".'
-    name: OneNote.Interfaces.InkAnalysisLineUpdateData
-    fullName: OneNote.Interfaces.InkAnalysisLineUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisLineUpdateData#paragraph:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineUpdateData#paragraph:member'
-    summary: |-
-      对父级 InkAnalysisParagraph 的引用。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisLineUpdateData
+uid: onenote!OneNote.Interfaces.InkAnalysisLineUpdateData:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisLineUpdateData
+summary: 用于更新 InkAnalysisLine 对象上的数据的接口，用于在 "inkAnalysisLine ( 中使用<!-- -->{ ... }<!-- -->)".
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: paragraph
+  uid: onenote!OneNote.Interfaces.InkAnalysisLineUpdateData#paragraph:member
+  package: onenote!
+  fullName: paragraph
+  summary: >-
+    对父级 InkAnalysisParagraph 的引用。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraph
-    fullName: paragraph
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraph?: OneNote.Interfaces.InkAnalysisParagraphUpdateData;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisParagraphUpdateData:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphUpdateData:interface'
-    name: OneNote.Interfaces.InkAnalysisParagraphUpdateData
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraph?: OneNote.Interfaces.InkAnalysisParagraphUpdateData;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisParagraphUpdateData:interface" />
+metadata:
+  ms.openlocfilehash: ee58114f938ef0f61048acde8d7f6e51f37db298
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151091"
