--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notebookcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notebookcollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.NotebookCollectionUpdateData:interface'
-    summary: '一个用于更新 NotebookCollection 对象上的数据的接口，可用于 "notebookCollection （<!-- -->{ ... }<!-- -->)".'
-    name: OneNote.Interfaces.NotebookCollectionUpdateData
-    fullName: OneNote.Interfaces.NotebookCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.NotebookCollectionUpdateData#items:member'
-  - uid: 'onenote!OneNote.Interfaces.NotebookCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: OneNote.Interfaces.NotebookData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.NotebookCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.NotebookCollectionUpdateData#items~0:complex'
-    name: 'OneNote.Interfaces.NotebookData[]'
-    fullName: 'OneNote.Interfaces.NotebookData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.NotebookData:interface'
-        name: OneNote.Interfaces.NotebookData
-        fullName: OneNote.Interfaces.NotebookData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: OneNote.Interfaces.NotebookCollectionUpdateData
+uid: onenote!OneNote.Interfaces.NotebookCollectionUpdateData:interface
+package: onenote!
+fullName: OneNote.Interfaces.NotebookCollectionUpdateData
+summary: 用于更新 NotebookCollection 对象上的数据的接口，用于在 "notebookCollection ( 中使用<!-- -->{ ... }<!-- -->)".
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: onenote!OneNote.Interfaces.NotebookCollectionUpdateData#items:member
+  package: onenote!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: OneNote.Interfaces.NotebookData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.NotebookData:interface" />[]
+metadata:
+  ms.openlocfilehash: 8b1dabffd14fcc52db12f74c31762107d6d574f6
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151063"
