--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notebookdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notebookdata.yml
@@ -1,142 +1,130 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.NotebookData:interface'
-    summary: 描述通过调用 "toJSON （）" 返回的数据的接口。
-    name: OneNote.Interfaces.NotebookData
-    fullName: OneNote.Interfaces.NotebookData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.NotebookData#baseUrl:member'
-      - 'onenote!OneNote.Interfaces.NotebookData#clientUrl:member'
-      - 'onenote!OneNote.Interfaces.NotebookData#id:member'
-      - 'onenote!OneNote.Interfaces.NotebookData#isVirtual:member'
-      - 'onenote!OneNote.Interfaces.NotebookData#name:member'
-      - 'onenote!OneNote.Interfaces.NotebookData#sectionGroups:member'
-      - 'onenote!OneNote.Interfaces.NotebookData#sections:member'
-  - uid: 'onenote!OneNote.Interfaces.NotebookData#baseUrl:member'
-    summary: |-
-      此笔记本所在网站的 url。 只读
+### YamlMime:TSType
+name: OneNote.Interfaces.NotebookData
+uid: onenote!OneNote.Interfaces.NotebookData:interface
+package: onenote!
+fullName: OneNote.Interfaces.NotebookData
+summary: '描述通过调用 "toJSON ( # A1" 返回的数据的接口。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: baseUrl
+  uid: onenote!OneNote.Interfaces.NotebookData#baseUrl:member
+  package: onenote!
+  fullName: baseUrl
+  summary: >-
+    此笔记本所在网站的 url。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: baseUrl
-    fullName: baseUrl
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'baseUrl?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.NotebookData#clientUrl:member'
-    summary: |-
-      笔记本的客户端 url。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: clientUrl
-    fullName: clientUrl
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'clientUrl?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.NotebookData#id:member'
-    summary: |-
-      获取笔记本的 ID。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'baseUrl?: string;'
+    return:
+      type: string
+- name: clientUrl
+  uid: onenote!OneNote.Interfaces.NotebookData#clientUrl:member
+  package: onenote!
+  fullName: clientUrl
+  summary: >-
+    笔记本的客户端 url。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.NotebookData#isVirtual:member'
-    summary: |-
-      如此如果该笔记本不是由用户创建（即 "错放分区"）。 只读
 
-      \[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: isVirtual
-    fullName: isVirtual
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'isVirtual?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.NotebookData#name:member'
-    summary: |-
-      获取笔记本的名称。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'clientUrl?: string;'
+    return:
+      type: string
+- name: id
+  uid: onenote!OneNote.Interfaces.NotebookData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取笔记本的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.NotebookData#sectionGroups:member'
-    summary: |-
-      笔记本中的分区组。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: sectionGroups
-    fullName: sectionGroups
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sectionGroups?: OneNote.Interfaces.SectionGroupData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.NotebookData#sectionGroups~0:complex'
-  - uid: 'onenote!OneNote.Interfaces.NotebookData#sections:member'
-    summary: |-
-      笔记本中的分区。 只读
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: isVirtual
+  uid: onenote!OneNote.Interfaces.NotebookData#isVirtual:member
+  package: onenote!
+  fullName: isVirtual
+  summary: >-
+    如此如果该笔记本不是由用户创建的 (即 "错放的分区" ) 。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: sections
-    fullName: sections
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sections?: OneNote.Interfaces.SectionData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.NotebookData#sections~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.NotebookData#sectionGroups~0:complex'
-    name: 'OneNote.Interfaces.SectionGroupData[]'
-    fullName: 'OneNote.Interfaces.SectionGroupData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.SectionGroupData:interface'
-        name: OneNote.Interfaces.SectionGroupData
-        fullName: OneNote.Interfaces.SectionGroupData
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'onenote!OneNote.Interfaces.NotebookData#sections~0:complex'
-    name: 'OneNote.Interfaces.SectionData[]'
-    fullName: 'OneNote.Interfaces.SectionData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.SectionData:interface'
-        name: OneNote.Interfaces.SectionData
-        fullName: OneNote.Interfaces.SectionData
-      - name: '[]'
-        fullName: '[]'
+
+    \[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'isVirtual?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: onenote!OneNote.Interfaces.NotebookData#name:member
+  package: onenote!
+  fullName: name
+  summary: >-
+    获取笔记本的名称。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+- name: sectionGroups
+  uid: onenote!OneNote.Interfaces.NotebookData#sectionGroups:member
+  package: onenote!
+  fullName: sectionGroups
+  summary: >-
+    笔记本中的分区组。 只读
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sectionGroups?: OneNote.Interfaces.SectionGroupData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.SectionGroupData:interface" />[]
+- name: sections
+  uid: onenote!OneNote.Interfaces.NotebookData#sections:member
+  package: onenote!
+  fullName: sections
+  summary: >-
+    笔记本中的分区。 只读
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sections?: OneNote.Interfaces.SectionData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.SectionData:interface" />[]
+metadata:
+  ms.openlocfilehash: 774e9db5b37b3e45a0c89977096fa803fc5d9635
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151021"
