--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notebookloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notebookloadoptions.yml
@@ -1,143 +1,146 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions:interface'
-    summary: |-
-      表示一个 OneNote 笔记本。 笔记本包含分区组合和分区。
+### YamlMime:TSType
+name: OneNote.Interfaces.NotebookLoadOptions
+uid: onenote!OneNote.Interfaces.NotebookLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.NotebookLoadOptions
+summary: >-
+  表示一个 OneNote 笔记本。 笔记本包含分区组合和分区。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.NotebookLoadOptions
-    fullName: OneNote.Interfaces.NotebookLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.NotebookLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.NotebookLoadOptions#baseUrl:member'
-      - 'onenote!OneNote.Interfaces.NotebookLoadOptions#clientUrl:member'
-      - 'onenote!OneNote.Interfaces.NotebookLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.NotebookLoadOptions#isVirtual:member'
-      - 'onenote!OneNote.Interfaces.NotebookLoadOptions#name:member'
-      - 'onenote!OneNote.Interfaces.NotebookLoadOptions#sectionGroups:member'
-      - 'onenote!OneNote.Interfaces.NotebookLoadOptions#sections:member'
-  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions#baseUrl:member'
-    summary: |-
-      此笔记本所在网站的 url。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: baseUrl
-    fullName: baseUrl
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'baseUrl?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions#clientUrl:member'
-    summary: |-
-      笔记本的客户端 url。 只读
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.NotebookLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: baseUrl
+  uid: onenote!OneNote.Interfaces.NotebookLoadOptions#baseUrl:member
+  package: onenote!
+  fullName: baseUrl
+  summary: >-
+    此笔记本所在网站的 url。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: clientUrl
-    fullName: clientUrl
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'clientUrl?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions#id:member'
-    summary: |-
-      获取笔记本的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions#isVirtual:member'
-    summary: |-
-      如此如果该笔记本不是由用户创建（即 "错放分区"）。 只读
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'baseUrl?: boolean;'
+    return:
+      type: boolean
+- name: clientUrl
+  uid: onenote!OneNote.Interfaces.NotebookLoadOptions#clientUrl:member
+  package: onenote!
+  fullName: clientUrl
+  summary: >-
+    笔记本的客户端 url。 只读
 
-      \[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: isVirtual
-    fullName: isVirtual
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'isVirtual?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions#name:member'
-    summary: |-
-      获取笔记本的名称。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions#sectionGroups:member'
-    summary: |-
-      笔记本中的分区组。 只读
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'clientUrl?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.NotebookLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取笔记本的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: sectionGroups
-    fullName: sectionGroups
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sectionGroups?: OneNote.Interfaces.SectionGroupCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.SectionGroupCollectionLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.NotebookLoadOptions#sections:member'
-    summary: |-
-      笔记本中的分区。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: sections
-    fullName: sections
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sections?: OneNote.Interfaces.SectionCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.SectionGroupCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.SectionGroupCollectionLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.SectionCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.SectionCollectionLoadOptions
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: isVirtual
+  uid: onenote!OneNote.Interfaces.NotebookLoadOptions#isVirtual:member
+  package: onenote!
+  fullName: isVirtual
+  summary: >-
+    如此如果该笔记本不是由用户创建的 (即 "错放的分区" ) 。 只读
+
+
+    \[[API 集： OneNoteApi 1.2](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'isVirtual?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: onenote!OneNote.Interfaces.NotebookLoadOptions#name:member
+  package: onenote!
+  fullName: name
+  summary: >-
+    获取笔记本的名称。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: sectionGroups
+  uid: onenote!OneNote.Interfaces.NotebookLoadOptions#sectionGroups:member
+  package: onenote!
+  fullName: sectionGroups
+  summary: >-
+    笔记本中的分区组。 只读
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sectionGroups?: OneNote.Interfaces.SectionGroupCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.SectionGroupCollectionLoadOptions:interface" />
+- name: sections
+  uid: onenote!OneNote.Interfaces.NotebookLoadOptions#sections:member
+  package: onenote!
+  fullName: sections
+  summary: >-
+    笔记本中的分区。 只读
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sections?: OneNote.Interfaces.SectionCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.SectionCollectionLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 622a488ab98cc3234d48dc893c677e21312aecad
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151014"
