--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notetagdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.notetagdata.yml
@@ -1,78 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.NoteTagData:interface'
-    summary: 描述通过调用 "noteTag （）" 返回的数据的接口。
-    name: OneNote.Interfaces.NoteTagData
-    fullName: OneNote.Interfaces.NoteTagData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.NoteTagData#id:member'
-      - 'onenote!OneNote.Interfaces.NoteTagData#status:member'
-      - 'onenote!OneNote.Interfaces.NoteTagData#type:member'
-  - uid: 'onenote!OneNote.Interfaces.NoteTagData#id:member'
-    summary: |-
-      获取 NoteTag 对象的 Id。 只读。
+### YamlMime:TSType
+name: OneNote.Interfaces.NoteTagData
+uid: onenote!OneNote.Interfaces.NoteTagData:interface
+package: onenote!
+fullName: OneNote.Interfaces.NoteTagData
+summary: '一个接口，该接口描述通过调用 "noteTag ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: id
+  uid: onenote!OneNote.Interfaces.NoteTagData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 NoteTag 对象的 Id。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.NoteTagData#status:member'
-    summary: |-
-      获取 NoteTag 对象的状态。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: status
-    fullName: status
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'status?: OneNote.NoteTagStatus | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved";'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.NoteTagData#status~0:complex'
-  - uid: 'onenote!OneNote.Interfaces.NoteTagData#type:member'
-    summary: |-
-      获取 NoteTag 对象的类型。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: status
+  uid: onenote!OneNote.Interfaces.NoteTagData#status:member
+  package: onenote!
+  fullName: status
+  summary: >-
+    获取 NoteTag 对象的状态。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: OneNote.NoteTagType | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2";'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.NoteTagData#type~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.NoteTagData#status~0:complex'
-    name: OneNote.NoteTagStatus | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"
-    fullName: OneNote.NoteTagStatus | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"
-    spec.typeScript:
-      - uid: 'onenote!OneNote.NoteTagStatus:enum'
-        name: OneNote.NoteTagStatus
-        fullName: OneNote.NoteTagStatus
-      - name: ' | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"'
-        fullName: ' | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"'
-  - uid: 'onenote!OneNote.Interfaces.NoteTagData#type~0:complex'
-    name: OneNote.NoteTagType | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"
-    fullName: OneNote.NoteTagType | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"
-    spec.typeScript:
-      - uid: 'onenote!OneNote.NoteTagType:enum'
-        name: OneNote.NoteTagType
-        fullName: OneNote.NoteTagType
-      - name: ' | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"'
-        fullName: ' | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"'
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'status?: OneNote.NoteTagStatus | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved";'
+    return:
+      type: <xref uid="onenote!OneNote.NoteTagStatus:enum" /> | "Unknown" | "Normal" | "Completed" | "Disabled" | "OutlookTask" | "TaskNotSyncedYet" | "TaskRemoved"
+- name: type
+  uid: onenote!OneNote.Interfaces.NoteTagData#type:member
+  package: onenote!
+  fullName: type
+  summary: >-
+    获取 NoteTag 对象的类型。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: OneNote.NoteTagType | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2";'
+    return:
+      type: <xref uid="onenote!OneNote.NoteTagType:enum" /> | "Unknown" | "ToDo" | "Important" | "Question" | "Contact" | "Address" | "PhoneNumber" | "Website" | "Idea" | "Critical" | "ToDoPriority1" | "ToDoPriority2"
+metadata:
+  ms.openlocfilehash: f9463cc20a981d0392da638becdb7c5d3e1f71de
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151007"
