--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pagecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pagecollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.PageCollectionUpdateData:interface'
-    summary: '一个用于更新 PageCollection 对象上的数据的接口，可用于 "pageCollection （<!-- -->{ ... }<!-- -->)".'
-    name: OneNote.Interfaces.PageCollectionUpdateData
-    fullName: OneNote.Interfaces.PageCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.PageCollectionUpdateData#items:member'
-  - uid: 'onenote!OneNote.Interfaces.PageCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: OneNote.Interfaces.PageData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.PageCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.PageCollectionUpdateData#items~0:complex'
-    name: 'OneNote.Interfaces.PageData[]'
-    fullName: 'OneNote.Interfaces.PageData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.PageData:interface'
-        name: OneNote.Interfaces.PageData
-        fullName: OneNote.Interfaces.PageData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: OneNote.Interfaces.PageCollectionUpdateData
+uid: onenote!OneNote.Interfaces.PageCollectionUpdateData:interface
+package: onenote!
+fullName: OneNote.Interfaces.PageCollectionUpdateData
+summary: 用于更新 PageCollection 对象上的数据的接口，用于在 "pageCollection ( 中使用<!-- -->{ ... }<!-- -->)".
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: onenote!OneNote.Interfaces.PageCollectionUpdateData#items:member
+  package: onenote!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: OneNote.Interfaces.PageData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.PageData:interface" />[]
+metadata:
+  ms.openlocfilehash: 8993c3721f620efa56642a9e4c7c24b8c1c53857
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49150944"
