--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pagecontentcollectiondata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pagecontentcollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionData:interface'
-    summary: 描述通过调用 "pageContentCollection （）" 返回的数据的接口。
-    name: OneNote.Interfaces.PageContentCollectionData
-    fullName: OneNote.Interfaces.PageContentCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.PageContentCollectionData#items:member'
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: OneNote.Interfaces.PageContentData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.PageContentCollectionData#items~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionData#items~0:complex'
-    name: 'OneNote.Interfaces.PageContentData[]'
-    fullName: 'OneNote.Interfaces.PageContentData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.PageContentData:interface'
-        name: OneNote.Interfaces.PageContentData
-        fullName: OneNote.Interfaces.PageContentData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: OneNote.Interfaces.PageContentCollectionData
+uid: onenote!OneNote.Interfaces.PageContentCollectionData:interface
+package: onenote!
+fullName: OneNote.Interfaces.PageContentCollectionData
+summary: '一个接口，该接口描述通过调用 "pageContentCollection ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: onenote!OneNote.Interfaces.PageContentCollectionData#items:member
+  package: onenote!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: OneNote.Interfaces.PageContentData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.PageContentData:interface" />[]
+metadata:
+  ms.openlocfilehash: 6f1a890907578feea11d068c4484439c438f30d3
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49150930"
