--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pagecontentcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.pagecontentcollectionloadoptions.yml
@@ -1,163 +1,162 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions:interface'
-    summary: |-
-      作为 PageContent 对象的集合，表示页面的内容。
+### YamlMime:TSType
+name: OneNote.Interfaces.PageContentCollectionLoadOptions
+uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.PageContentCollectionLoadOptions
+summary: >-
+  作为 PageContent 对象的集合，表示页面的内容。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.PageContentCollectionLoadOptions
-    fullName: OneNote.Interfaces.PageContentCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#image:member'
-      - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#ink:member'
-      - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#left:member'
-      - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#outline:member'
-      - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#parentPage:member'
-      - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#top:member'
-      - 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#type:member'
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#id:member'
-    summary: |-
-      对于集合中的每一项：获取 PageContent 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#image:member'
-    summary: |-
-      对于集合中的每一项：获取 PageContent 对象中的图像。 如果 PageContentType 不为 Image，则引发异常。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    对于集合中的每一项：获取 PageContent 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: image
-    fullName: image
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'image?: OneNote.Interfaces.ImageLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ImageLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#ink:member'
-    summary: |-
-      对于集合中的每一项：获取 PageContent 对象中的墨迹。 如果 PageContentType 不为 Ink，则引发异常。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: ink
-    fullName: ink
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'ink?: OneNote.Interfaces.FloatingInkLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.FloatingInkLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#left:member'
-    summary: |-
-      对于集合中的每一项：获取或设置 PageContent 对象的左（X 轴）位置。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: image
+  uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#image:member
+  package: onenote!
+  fullName: image
+  summary: >-
+    对于集合中的每一项：获取 PageContent 对象中的图像。 如果 PageContentType 不为 Image，则引发异常。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'left?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#outline:member'
-    summary: |-
-      对于集合中的每一项：获取 PageContent 对象中的大纲。 如果 PageContentType 不为 Outline，则引发异常。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: outline
-    fullName: outline
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'outline?: OneNote.Interfaces.OutlineLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.OutlineLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#parentPage:member'
-    summary: |-
-      对于集合中的每一项：获取包含 PageContent 对象的页面。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'image?: OneNote.Interfaces.ImageLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ImageLoadOptions:interface" />
+- name: ink
+  uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#ink:member
+  package: onenote!
+  fullName: ink
+  summary: >-
+    对于集合中的每一项：获取 PageContent 对象中的墨迹。 如果 PageContentType 不为 Ink，则引发异常。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: parentPage
-    fullName: parentPage
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentPage?: OneNote.Interfaces.PageLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.PageLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#top:member'
-    summary: |-
-      对于集合中的每一项：获取或设置 PageContent 对象的顶部（Y 轴）位置。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'top?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#type:member'
-    summary: |-
-      对于集合中的每一项：获取 PageContent 对象的类型。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'ink?: OneNote.Interfaces.FloatingInkLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.FloatingInkLoadOptions:interface" />
+- name: left
+  uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#left:member
+  package: onenote!
+  fullName: left
+  summary: >-
+    对于集合中的每一项：获取或设置 PageContent 对象的左 (X 轴) 位置。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions:interface'
-    name: OneNote.Interfaces.ImageLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.FloatingInkLoadOptions:interface'
-    name: OneNote.Interfaces.FloatingInkLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.OutlineLoadOptions:interface'
-    name: OneNote.Interfaces.OutlineLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions:interface'
-    name: OneNote.Interfaces.PageLoadOptions
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'left?: boolean;'
+    return:
+      type: boolean
+- name: outline
+  uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#outline:member
+  package: onenote!
+  fullName: outline
+  summary: >-
+    对于集合中的每一项：获取 PageContent 对象中的大纲。 如果 PageContentType 不为 Outline，则引发异常。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'outline?: OneNote.Interfaces.OutlineLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.OutlineLoadOptions:interface" />
+- name: parentPage
+  uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#parentPage:member
+  package: onenote!
+  fullName: parentPage
+  summary: >-
+    对于集合中的每一项：获取包含 PageContent 对象的页面。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentPage?: OneNote.Interfaces.PageLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.PageLoadOptions:interface" />
+- name: top
+  uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#top:member
+  package: onenote!
+  fullName: top
+  summary: >-
+    对于集合中的每一项：获取或设置 PageContent 对象的上 (Y 轴) 位置的位置。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'top?: boolean;'
+    return:
+      type: boolean
+- name: type
+  uid: onenote!OneNote.Interfaces.PageContentCollectionLoadOptions#type:member
+  package: onenote!
+  fullName: type
+  summary: >-
+    对于集合中的每一项：获取 PageContent 对象的类型。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: e37e1cbce02f89243cb70e331a6e1d54139902d1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49150881"
